@@ -3,6 +3,9 @@ Version 1.19.4 *
 - Added fallback for data locations with special characters (non Latin-1 characters), i.e. select a license location outside the user directory
 - Fixed that existing files were added to the project, although `Abort` was selected when getting a model from the mode library.
 - Fixed system log info text for check for update, which has been marked as error
+- Create a gsp file when exporting an internal project.
+- When a new project is created it counts as internal, thus no gsp-file is created.
+- Disable delete operation for GAMS-System project and files.
 
 Version 1.19.3
 ==================
